hphp/hack/test/typecheck/reactive/owned_mutable5.php
<?hh

// ERROR
function f(<<__OwnedMutable>> A $a) {
}
